--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.eae27d4c.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.163058f9.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.019f7634.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.11e3744e.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.efa8ec37.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.fbe2f232.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.a3bdceca.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_fazq4w = {
+					__sveltekit_1oe3n3t = {
 						env: {},
 						base: "",
 						element: document.currentScript.parentElement
 					};
 
 					Promise.all([
-						import("/_app/immutable/entry/start.eae27d4c.js"),
-						import("/_app/immutable/entry/app.efa8ec37.js")
+						import("/_app/immutable/entry/start.163058f9.js"),
+						import("/_app/immutable/entry/app.a3bdceca.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_fazq4w.element);
+						kit.start(app, __sveltekit_1oe3n3t.element);
 					});
 				}
 			</script>
