--- a/index.html
+++ b/index.html
@@ -2,32 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.163058f9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.019f7634.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.fbe2f232.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.a3bdceca.js">
+		<title>My First Web Page</title>
+		<script>
+			const protein = ['Chicken', 'Meatballs', 'Leg of lamb', 'Salmon', 'Seabass'];
+			const vegetables = ['Broccoli', 'Cauliflower', 'Brussel Sprouts', 'Courgette', 'Asparagus', 'Squash','Corn'];
+			const carbs = ['Rice', 'Pasta', 'Potatoes','Quinoa'];
+		</script>
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
-			<script>
-				{
-					__sveltekit_1oe3n3t = {
-						env: {},
-						base: "",
-						element: document.currentScript.parentElement
-					};
+	<body>
 
-					Promise.all([
-						import("/_app/immutable/entry/start.163058f9.js"),
-						import("/_app/immutable/entry/app.a3bdceca.js")
-					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1oe3n3t.element);
-					});
-				}
-			</script>
-		</div>
 	</body>
 </html>
